--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -2,3 +2,18 @@
   padding: 0;
   margin: 0;
 }
+
+body {
+  background: #009688;
+  padding: 0;
+  margin: 0;
+  font: 20px/1 "HanHei SC", "PingHei", "PingFang SC", "STHeitiSC-Light", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
+  overflow: hidden;
+  cursor: default;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  -moz-font-feature-settings: 'liga', 'kern';
+  direction: ltr;
+  text-align: left;
+}
